--- a/Guida.tex
+++ b/Guida.tex
@@ -92,7 +92,7 @@
 
 \part{Il Mondo di Eovras}
 
-\input{data/NPC/Mythrenwald.tex}
+\input{data/Eovras/Mythrenwald.tex}
 
 \part{Nemici e Pericoli}
 
