--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -1,6 +1,21 @@
 \chapter{Foresta di Mythrenwald}
 
+\begin{DndReadAloud}
+  \it
+  "Minchia, quante foglie" disse Fillianore addentrandosi nella foresta con i suoi compagni. "Forse venire qui in autunno non è stata una buona ide-" La giovane tiefling non riuscì a finire la frase: appena vide l'albero al centro della radura dove erano appena entrati rimase a bocca aperta e si ammutolì.
+\end{DndReadAloud}
+
 \section{Luoghi}
+
+\DndDropCapLine{A}{} tutti coloro che in un modo o nell'altro giungono alle porte della foresta di Mythrenwald basta uno sguardo per rendersi conto di non trovarsi di fronte al boschetto dietro il loro villaggio. Essa non è solo la più grande del continente, ma si dice che sia la culla della vita stessa fin dalla creazione di Eovras ed è pregna di un potere primordiale e sconfinato, ma ancora più grande è il numero di misteri che essa racchiude. Nel cuore della foresta torreggia il Grande Albero di Mythrenbaum, più alto e più antico di ogni struttura mai concepita da menti mortali.
+
+\subsection{Il Grande Albero di Mythrenbaum}
+
+Ben poco si sa della colossale pianta, le cui radici si estendono fino alle profondità della terra e la cui chioma sfonda il bianco soffitto delle nuvole. Oltre alle sue gargantuesche dimensioni, la caratteristica più sorprendente dell'Albero è la sua corteccia: un fittissimo reticolo di rune lo abbraccia completamente, che si muovono, cambiano, splendono di luce stellare. Nessuna mente, mortale o divina, può anche solo sperare di possedere tutta la conoscenza incisa sulla corteccia del Grande Albero, vi sono scritte storie di epoche dimenticate, dati astronomici dalla precisione sorprendente, profezie di eventi che avverranno tra millenni e millenni, incantesimi di potenza incalcolabile e la ricetta per un mix di spezie da usare quando si cucina il pollo arrosto (provare per credere).
+
+\subsection{I villaggi di Mythrenwald}
+
+Disseminati per la foresta esistono tutta una serie di piccoli villaggi, sarebbe impossibile elencarli tutti, abitati da varie razze in coesistenza pacifica: elfi di ogni discendenza, gnomi, halfling, umani, aaracockra, ma anche dragonidi, mezzorchi, tiefling, forgiati addirittura... c'è chi dice che da qualche parte si nasconano persino dei divorati elementali...
 
 \section{Abitanti}
 
@@ -86,3 +101,5 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
 \end{DndMonster}
 
 \subsection{I Druidi di Mythrenwald}
+
+La foresta di Mythrenwald, per quanto antica e potente, non è invincibile di fronte a ogni minaccia, per questo secoli fa, dopo la prima terrificante Guerra di Eovras, un gruppo di rifugiati trovatisi al cospetto del grande Albero decise di votare la propria vita alla protezione della foresta... nacque il Circolo Druidico delle Stelle.
