--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -13,6 +13,16 @@
 
 Ben poco si sa della colossale pianta, le cui radici si estendono fino alle profondità della terra e la cui chioma sfonda il bianco soffitto delle nuvole. Oltre alle sue gargantuesche dimensioni, la caratteristica più sorprendente dell'Albero è la sua corteccia: un fittissimo reticolo di rune lo abbraccia completamente, che si muovono, cambiano, splendono di luce stellare. Nessuna mente, mortale o divina, può anche solo sperare di possedere tutta la conoscenza incisa sulla corteccia del Grande Albero, vi sono scritte storie di epoche dimenticate, dati astronomici dalla precisione sorprendente, profezie di eventi che avverranno tra millenni e millenni, incantesimi di potenza incalcolabile e la ricetta per un mix di spezie da usare quando si cucina il pollo arrosto (provare per credere).
 
+\subsection{Il borgo di Mythrenberg}
+
+Nella radura intorno al Grande Albero sorge il borgo di Mythrenberg, sede del Circolo delle Stelle e nucleo abitato più grande della foresta. Mythrenberg sicuramente non è grande come una città volante dei forgiati, o nemmeno come il grande porto di Romboporto, ma c'è tutto quello che serve per condurre una vita pacifica.
+
+\subsubsection{La sede del Circolo} Nulla di particolare, un edificio dalle dimensioni relativamente contenute dotato di un dormitorio, una mensa, uno scriptorium e una sala riunioni per il consiglio degli anziani.
+
+\subsubsection{La biblioteca della corteccia} Visto che le rune del Grande Albero sono scritte in una miriade di lingue, molte di queste dimenticate, parte del compito dei druidi novizi è tradurle e ricopiarle su dei banali libri per la consultazione di chiunque lo richieda, per la gioia di Kur il bibliotecario.
+
+\subsubsection{La falegnameria di Y'Keah} Una normale falegnameria, molto semplice, troppo semplice considerando la domanda di mobili in tutta la foresta.
+
 \subsection{I villaggi di Mythrenwald}
 
 Disseminati per la foresta esistono tutta una serie di piccoli villaggi, sarebbe impossibile elencarli tutti, abitati da varie razze in coesistenza pacifica: elfi di ogni discendenza, gnomi, halfling, umani, aaracockra, ma anche dragonidi, mezzorchi, tiefling, forgiati addirittura... c'è chi dice che da qualche parte si nasconano persino dei divorati elementali...
@@ -103,3 +113,33 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
 \subsection{I Druidi di Mythrenwald}
 
 La foresta di Mythrenwald, per quanto antica e potente, non è invincibile di fronte a ogni minaccia, per questo secoli fa, dopo la prima terrificante Guerra di Eovras, un gruppo di rifugiati trovatisi al cospetto del grande Albero decise di votare la propria vita alla protezione della foresta... nacque il Circolo Druidico delle Stelle.
+
+\subsubsection{I principi del Circolo}
+
+\paragraph{Protezione della Foresta} Il più fondamentale dei compiti di un druido del Circolo delle Stelle è proteggere la foresta di Mythrenwald, sia contro le minacce immediate (ad esempio un dragonide con il raffreddore) sia contro quelle più remote. Non è raro trovare druidi di Mythrenwald in giro per il mondo per cercare di sfatare eventi o conflitti che possano mettere in pericolo la foresta.
+
+\paragraph{Protezione della vita} Oltre a proteggere la foresta in particolare, i druidi di Mythrenwald nel corso dei loro viaggi devono sempre mantenere una condotta che minimizzi i danni nei confronti della vita che li circonda, qualunque sia la sua natura.
+
+\paragraph{Rispetto della morte} Ogni druido sa che vita e morte sono due facce della stessa medaglia, da onorare con la stessa dignità. Un druido di Mythrenwald è tenuto anche ad amministrare i riti funebri di ogni creatura che incontri la morte lungo il suo stesso cammino.
+
+\paragraph{Studio della corteccia e del cielo} La conoscenza incisa sul Grande Albero di Mythrenbaum e il suo riscontro astronomico sono le risorse più importanti per un drudio del Circolo delle Stelle, dalle quali egli trae consiglio e forza. Tra il ritorno da un viaggio e la partenza per un altro, un druido di Mythrenwald deve passare almeno una settimana a studiare le rune della corteccia e il cielo notturno.
+
+\paragraph{Accoglienza e ospitalità} Il Circolo è nato da un gruppo di rifugiati in cerca di una casa, questo non deve essere mai dimenticato. Chiunque voglia unirsi è bene accetto, come ogni viaggiatore in cerca di ospitalità, indipendentemente dalla sua razza o dalle sue origni.
+
+\subsection{La struttura del Circolo}
+
+Sebbene in origine il Circolo delle Stelle fosse un'associazione piuttosto disorganizzata, col tempo è andata costituendosi una struttura gerarchica basata sulla conoscenza delle rune della corteccia.
+
+\paragraph{Il Grande Guardiano} Il capo del Circolo, il più saggio tra i Druidi con la più profonda coscienza dei segreti della foresta. Nella storia di Mythrenwald ci sono stati solo due Grandi Guardiani: Samalas Mythrenwachter, ormai deceduto da almeno un millennio, e Halimath Selevarum, l'attuale Guardiano.
+
+\paragraph{Kur il bibliotecario} Nessuno sa molto su Kur, il misterioso bibliotecario di Mythrenberg. Gira voce che sia misteriosamente apparso offrendosi come volontario il giorno della fondazione della biblioteca (circa tre millenni fa) e che da allora abbia fatto un lavoro impeccabile. Sembra essere l'unico a conoscenza del significato dei nomi di Mythrenwald, Mythrenwachter, Mythrenberg e Mythrenbaum, ma ogni volta che glielo si chiede scoppia a ridere e non riesce a rispondere. \\ \textit{Altre informazioni su Kur possono essere reperite nella Biblioteca Omnicomprensiva di Ker.}
+
+\paragraph{Il consiglio degli anziani} Sebbene i druidi di Mythrenwald abbiano una componente di maggioranza molto giovane, le decisioni che riguardano tutto il Circolo sono prese dal consiglio degli anziani, formato dai sette membri più vecchi del Circolo e presieduto dal Grande Guardiano, che si limita ad agire come organo esecutivo invece che legislativo.
+
+\paragraph{L'Assemblea} L'assemblea di tutti i membri del Circolo funge sia da organo legittimante delle decisioni del Consiglio sia da Tribunale. Il suffragio è universale ed il voto viene espresso segretamente tramite l'incisione di una runa su un pezzo di corteccia di un albero "normale" della foresta e la sepoltura tra le sue radici. Una delle rune del Grande Albero provvede al conteggio e a fornire il responso.
+
+\paragraph{L'ordine dei viaggiatori} Non è mai successo che tutto il Circolo si trovasse nella foresta dopo il giorno della sua fondazione, è sempre esistito un nutrito gruppo di druidi in viaggio all'esterno di Mythrenwald.
+
+\subsubsection{Y'Keah il carpentiere}
+
+Un nano dal marcato accento nordico e dall'inesauribile voglia di lavorare. I suoi mobili non sono di qualità particolarmente pregiata ma senza dubbio risultano molto semplici ed economici, che alla fine sono i fattori più importanti per una regione senza un'economia particolarmente fiorente.
