--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -13,6 +13,14 @@
 
 Ben poco si sa della colossale pianta, le cui radici si estendono fino alle profondità della terra e la cui chioma sfonda il bianco soffitto delle nuvole. Oltre alle sue gargantuesche dimensioni, la caratteristica più sorprendente dell'Albero è la sua corteccia: un fittissimo reticolo di rune lo abbraccia completamente, che si muovono, cambiano, splendono di luce stellare. Nessuna mente, mortale o divina, può anche solo sperare di possedere tutta la conoscenza incisa sulla corteccia del Grande Albero, vi sono scritte storie di epoche dimenticate, dati astronomici dalla precisione sorprendente, profezie di eventi che avverranno tra millenni e millenni, incantesimi di potenza incalcolabile e la ricetta per un mix di spezie da usare quando si cucina il pollo arrosto (provare per credere).
 
+\subsubsection{Dentro al tronco dell'Albero}
+
+Il tronco del Grande Albero presenta una piccola cavità (piccola, più o meno) dove è stato rispettosamente scavato l'alloggio del Grande Guardiano. Al centro di questa cavità si trova il cuore dell'Albero, una fibra di pura energia stellare che si protrae lungo tutto l'albero, dalle radici più profonde alle foglioline più alte.
+
+\subsubsection{Sulla chioma}
+
+Nessuno è mai riuscito a scalare l'Albero fino alla cima della chioma o a volarci sopra, ma tra gli strati più bassi si trovano gli alloggi dei membri del consiglio, che si riuniscono sulla cima del tronco. Dagli alloggi scendono dei montacarichi (ovviamente a motore magico) che gli anziani usano per salirvi. Il Grande Guardiano non usa questi montacarichi per salire il tronco ma corre lungo la parete.
+
 \subsection{Il borgo di Mythrenberg}
 
 Nella radura intorno al Grande Albero sorge il borgo di Mythrenberg, sede del Circolo delle Stelle e nucleo abitato più grande della foresta. Mythrenberg sicuramente non è grande come una città volante dei forgiati, o nemmeno come il grande porto di Romboporto, ma c'è tutto quello che serve per condurre una vita pacifica.
