--- a/data/Personaggi/Chierico.tex
+++ b/data/Personaggi/Chierico.tex
@@ -4,6 +4,11 @@
 
 \section{Dominio di Integrità}
 
+\begin{DndReadAloud}
+  \it
+  "E questo è interessante. Perchè è interessante? Perchè l'ho scritto, e io scrivo solo cose interessanti." \\ (W.A. De Graaf)
+\end{DndReadAloud}
+
 \subsection{Incantesimi di dominio}
 
 \begin{DndTable}{XX}
