--- a/data/Personaggi/Druido.tex
+++ b/data/Personaggi/Druido.tex
@@ -3,3 +3,8 @@
 \section{Privilegi di Classe Opzionali}
 
 \section{Circolo Sperimentale}
+
+\begin{DndReadAloud}
+  \it
+  "Siamo a Fisica, quantifichi!" \\ (R. Dolesi)
+\end{DndReadAloud}
