--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -1,6 +1,16 @@
 \chapter{Stregone}
 
+\begin{DndReadAloud}
+    \it
+    "Uno stregone non è mai in ritardo, Frodo Baggins. Né in anticipo. Arriva precisamente quando intende farlo." \\ (Il Signore degli Anelli - La Compagnia dell'Anello, 2001)
+  \end{DndReadAloud}
+
 \section{Privilegi di Classe Opzionali}
 
 \section{Dinastia di Analisti}
+
+\begin{DndReadAloud}
+    \it
+    "\begin{math}f(x)\end{math} \ è suriettiva se whoop whoop, whooooooop!" \\ (A. Defranceschi)
+  \end{DndReadAloud}
 
