--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -13,6 +13,11 @@ Un numero di volte pari al suo bonus di competenza per riposo breve, quando il W
 
 \section{Lo Spazio Proiettivo}
 
+\begin{DndReadAloud}
+  \it
+  "E quando l'ho visto, ragazzi, ho esclamato 'Ma questa è Geometria Pura!'" \\ (M. Andreatta)
+\end{DndReadAloud}
+
 \DndDropCapLine{G}{}irano voci su una certa entità... Un oggetto legato alla stessa natura dei piani dove ci muoviamo... coloro che ne hanno ricevuto l'intuizione la descrivono come "una ganzata pazzesca" o "roba da Harry Potter", perdono l'uso della ragione e vanno in giro a importunare i passanti con frasi terrificanti come "Ragazzi, avete della Geometria?"... roba da brividi...
 
 \subsection{Lista degli incantesimi ampliata}
