--- a/data/Personaggi/Paladino.tex
+++ b/data/Personaggi/Paladino.tex
@@ -2,4 +2,9 @@
 
 \section{Privilegi di Classe Opzionali}
 
-\section{Giuramento di Verità}
+\section{Giuramento di Veramente Vera Verità}
+
+\begin{DndReadAloud}
+  \it
+  \begin{math}[a = A] \Rightarrow [a = (-1)^{2a^2}(A-1)+1]\end{math} \ "Banale aritmetica" \\ (R. Zunino)
+\end{DndReadAloud}
