temporaneamente commentato hyperref

--- a/Guida.tex
+++ b/Guida.tex
@@ -20,7 +20,7 @@
 \usepackage{listings}
 \usepackage{shortvrb}
 \usepackage{stfloats}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 
 \captionsetup[table]{labelformat=empty,font={sf,sc,bf,},skip=0pt}
 
