--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -14,3 +14,22 @@
     "\begin{math}f(x)\end{math} \ è suriettiva se whoop whoop, whooooooop!" \\ (A. Defranceschi)
   \end{DndReadAloud}
 
+\section{Cavaliere della Trama}
+\textit{Questa origine stregonesca non è di mia invenzione, è un'origine homebrew piuttosto popolare che includo e ribilancio qui al fine di includerla nelle mie campagne}
+
+\begin{DndReadAloud}
+  \it
+  "L'abilità di distruggere un pianeta è insignificante in confronto alla potenza della Forza" \\ (Guerre Stellari, 1977)
+\end{DndReadAloud}
+
+A prima vista l'Ordine dei Cavalieri della Trama può sembrare più simile ad un gruppo di monaci o ad un ordine di maghi, ma in realtà tutti i suoi membri sono stregoni.
+
+\subsection{La Spada di Trama}
+
+A partire dal 1° livello un Cavaliere della Trama può dedicare un riposo breve a concentrarsi per entrare in sintonia con un'arma a una mano in suo possesso e trasformarla in una Spada di Trama. \\ Usando un'azione bonus, l'arma può essere attivata, trasformando la sua lama in un fascio di energia magica pura. \\ I danni dell'arma diventano 1d8 + modificatore di Carisma danni da forza (mantenendo eventuali bonus dell'arma originale, ad esempio un +1 a colpire e ai danni). \\ L'arma guadagna le proprietà \textit{accurata} e \textit{a due mani (1d10)} e il Cavaliere è considerato automaticamente competente con qualsiasi Spada di Trama da lui creata. \\ La Spada di Trama può essere manipolata usando l'incantesimo \textit{Mano Magica} (non per attaccare), ma mentre non si trova in mano al Cavaliere deve essere mantenuta attiva tramite la concentrazione dell'incantatore, altrimenti si disattiva. \\ In altri casi, la lama della Spada rimane attiva finchè non viene usata un'azione bonus per disattivarla, finchè il suo Cavaliere non diventa incosciente o fino alla sua morte. \\ Finchè un Cavaliere impugna la sua Spada della Trama, può usare una reazione per lanciare l'incantesimo \textit{Interdizione alle Lame} a volontà. \\ Il danno della Spada di Trama aumenta di 1d8 al 5°, 11° e 17° livello.
+
+\subsection{Cavaliere della Trama}
+
+A partire dal 1° livello un Cavaliere della Trama, come azione bonus, può spendere un punto stregoneria per ottenere uno dei seguenti effetti: \\
+Ottenere vantaggio ad una prova di abilità, tiro per colpire con la sua Spada di Trama, tiro per colpire con un incantesimo o tiro salvezza. \\
+Ottenere un bonus di +1 alla sua CA fino all'inizio del suo prossimo turno.
