--- a/Guida.tex
+++ b/Guida.tex
@@ -32,7 +32,8 @@
   breaklines=true,
 }
 
-\title{Compendio (Semi)Omnicomprensivo di Ciana\\
+\title{\large{\textit{Ciana presenta:}}\\
+    Più profondo dell'Abisso, più alto del Firmamento \\
     \large {\textit{Alcuni potranno morire, ma è un sacrificio che sono pronto a fare.}}
     }
 \author{Ciana, ovviamente}
