--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -22,14 +22,31 @@
   "L'abilità di distruggere un pianeta è insignificante in confronto alla potenza della Forza" \\ (Guerre Stellari, 1977)
 \end{DndReadAloud}
 
-A prima vista l'Ordine dei Cavalieri della Trama può sembrare più simile ad un gruppo di monaci o ad un ordine di maghi, ma in realtà tutti i suoi membri sono stregoni.
+\DndDropCapLine{A}{} prima vista l'Ordine dei Cavalieri della Trama può sembrare più simile ad un gruppo di monaci o ad un ordine di maghi, ma in realtà tutti i suoi membri sono stregoni.
 
 \subsection{La Spada di Trama}
 
-A partire dal 1° livello un Cavaliere della Trama può dedicare un riposo breve a concentrarsi per entrare in sintonia con un'arma a una mano in suo possesso e trasformarla in una Spada di Trama. \\ Usando un'azione bonus, l'arma può essere attivata, trasformando la sua lama in un fascio di energia magica pura. \\ I danni dell'arma diventano 1d8 + modificatore di Carisma danni da forza (mantenendo eventuali bonus dell'arma originale, ad esempio un +1 a colpire e ai danni). \\ L'arma guadagna le proprietà \textit{accurata} e \textit{a due mani (1d10)} e il Cavaliere è considerato automaticamente competente con qualsiasi Spada di Trama da lui creata. \\ La Spada di Trama può essere manipolata usando l'incantesimo \textit{Mano Magica} (non per attaccare), ma mentre non si trova in mano al Cavaliere deve essere mantenuta attiva tramite la concentrazione dell'incantatore, altrimenti si disattiva. \\ In altri casi, la lama della Spada rimane attiva finchè non viene usata un'azione bonus per disattivarla, finchè il suo Cavaliere non diventa incosciente o fino alla sua morte. \\ Finchè un Cavaliere impugna la sua Spada della Trama, può usare una reazione per lanciare l'incantesimo \textit{Interdizione alle Lame} a volontà. \\ Il danno della Spada di Trama aumenta di 1d8 al 5°, 11° e 17° livello.
+A partire dal 1° livello un Cavaliere della Trama può dedicare un riposo breve a concentrarsi per entrare in sintonia con un'arma a una mano in suo possesso e trasformarla in una Spada di Trama. \\ Usando un'azione bonus, l'arma può essere attivata, trasformando la sua lama in un fascio di energia magica pura. \\ I danni dell'arma diventano 1d8 + modificatore di Carisma danni da forza (mantenendo eventuali bonus dell'arma originale, ad esempio un +1 a colpire e ai danni). \\ L'arma guadagna le proprietà \textit{accurata} e \textit{a due mani} e il Cavaliere è considerato automaticamente competente con qualsiasi Spada di Trama da lui creata. \\ La Spada di Trama può essere manipolata usando l'incantesimo \textit{Mano Magica} (non per attaccare), ma mentre non si trova in mano al Cavaliere deve essere mantenuta attiva tramite la concentrazione dell'incantatore, altrimenti si disattiva. \\ In altri casi, la lama della Spada rimane attiva finchè non viene usata un'azione bonus per disattivarla, finchè il suo Cavaliere non diventa incosciente o fino alla sua morte. \\ Finchè un Cavaliere impugna la sua Spada della Trama, può usare una reazione per lanciare l'incantesimo \textit{Interdizione alle Lame} a volontà. \\ Il danno della Spada di Trama aumenta di 1d8 al 5°, 11° e 17° livello.
 
 \subsection{Cavaliere della Trama}
 
 A partire dal 1° livello un Cavaliere della Trama, come azione bonus, può spendere un punto stregoneria per ottenere uno dei seguenti effetti: \\
 Ottenere vantaggio ad una prova di abilità, tiro per colpire con la sua Spada di Trama, tiro per colpire con un incantesimo o tiro salvezza. \\
 Ottenere un bonus di +1 alla sua CA fino all'inizio del suo prossimo turno.
+
+\subsection{Percorso della Trama}
+
+Al 6° livello, il Cavaliere sceglie un Percorso da seguire:
+\paragraph{Percorso del Grifone} La Spada perde la proprietà \textit{a due mani} e guadagna le proprietà \textit{leggera} e \textit{versatile (1d10)}
+\paragraph{Percorso della Testuggine} Quando il Cavaliere impugna la sua Spada di Trama con una mano e non impugna nulla nell'altra, ottiene un bonus di +1 alla CA e viene considerato come se impugnasse uno scudo per ogni attività che ne richieda l'uso.
+\paragraph{Percorso della Manticora} La Spada ottiene la proprietà \textit{lancio (6/12)}. Il Cavaliere può usare un'azione bonus per richiamare la Spada dopo averla lanciata.
+
+\subsection{Stile della Trama}
+Al 14° livello, il Cavaliere sceglie uno stile di combattimento tra i seguenti:
+\paragraph{Stile del Fiume} Quando una Creatura effettua un attacco a distanza contro il Cavaliere, può usare la sua azione bonus per imporre svantaggio al tiro per colpire o usare anche un punto stregoneria per deviare l'attacco.
+\paragraph{Stile della Tempesta} Il Cavaliere ottiene l'abilità di creare due Spade di Trama alla volta. Inoltre può usarle per combattere come se avesse lo stile di combattimento \textit{combattimento a due armi} e aggiungere il modificatore di Carisma anche al secondo attacco.
+\paragraph{Stile del Vulcano} Il Cavaliere può usare un'azione bonus per spendere un punto stregoneria e uno slot incantesimo in suo possesso e ottenere una riserva di attacchi extra pari al livello dello slot utilizzato. Questa riserva dura 10 minuti. Quando il Cavaliere effettua quest'azione può subito usare uno degli attacchi. Nei turni successivi può spendere un'azione bonus per usare un altro degli attacchi rimasti.
+
+\subsection{Tutt'uno con la Trama}
+Al 18° livello il Cavaliere apprende un Percorso e uno Stile aggiuntivi tra quelli che non conosce.
+\\ Inoltre, può spendere uno slot incantesimo per venire a conoscenza della presenza di ogni incantatore nel raggio di 1,5 km per livello dello slot e del loro slot incantesimo di livello più elevato.
