--- a/data/Personaggi/Mago.tex
+++ b/data/Personaggi/Mago.tex
@@ -1,3 +1,7 @@
 \chapter{Mago}
 
 \section{Privilegi di Classe Opzionali}
+
+\subsection{Controcanto della Lama}
+
+Dal 6° livello un Cantore della Lama, quando un nemico fallisce un attacco da mischia contro di lui, può usare la sua reazione per contrattaccare con la propria arma senza aggiungere il modificatore di caratteristica al danno. È comunque necessario il tiro per colpire.
