--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -7,9 +7,17 @@
 
 \section{Privilegi di Classe Opzionali}
 
+\subsection{Supplica Occulta: Occhi Aperti}
+\textit{Prerequisito: 18° livello} \\ Il potere del patrono, apre gli occhi al Warlock, che potrebbe non essere più in grado di richiuderli: ottiene \textit{vista pura}, non può essere limitata o disattivata se non rimuovendo questa supplica o accecandosi volontariamente. \\
+La costante esposizione al Piano Etereo è estremamente impegnativa anche per la mente di incantatori molto esperti, quindi il Warlock ha bisogno di tempo ed esperienza per abituarsi.
+\paragraph{Dopo nessun aumento di livello}Il Warlock ha costanti emicranee di intensità variabile in base alla presenza di auree molto potenti; in presenza di creature la cui forma nel Piano Etereo risulterebbe sconvolgente o disturbante (a discrezione del DM), il Warlock ha svantaggio ai TS per mantenere la concentrazione e ogni attacco inflitto da tali creature provoca 1d4-1 danni psichici aggiuntivi.
+\paragraph{Dopo un aumento di livello}Il Warlock si sta abituando alla forma del mondo sul Piano Etereo. Non subisce più danni aggiuntivi e non ha più svantaggio ai TS per mantenere la concentrazione, a meno che questa non sia disturbata direttamente dalle creature dall'aspetto più disturbante.
+\paragraph{Dopo due aumenti di livello o al 20° livello} Ormai la \textit{vista pura} è l'unica vista che il Warlock conosca, il Piano Etereo e il Piano Materiale per lui sono assolutamente inseparabili. La \textit{vista pura} non gli causa più nessun problema. Da questo momento in poi, rimuovere questa supplica gli causerebbe cecità permanente, incurabile se non da altre sorgenti di \textit{vista pura} (come \textit{Visione del Vero}). \\
+Riottenere questa supplica dopo averla rimossa richiede di riabituarsi a essa.
+
 \subsection{Supplica Occulta: Deflagrazione aleatoria}
 \textit{Prerequisito: trucchetto Deflagrazione Occulta} \\
-Un numero di volte pari al suo bonus di competenza per riposo breve, quando il Warlock colpisce un bersaglio con il trucchetto Deflagrazione Occulta, come azione bonus può imporre al bersaglio di tirare dalla tabella della Magia Selvaggia un numero di volte pari al numero di raggi da cui è stato colpito. 
+Un numero di volte pari al suo bonus di competenza per riposo breve, quando il Warlock colpisce un bersaglio con il trucchetto Deflagrazione Occulta, come azione bonus può imporre al bersaglio di tirare dalla tabella della Magia Selvaggia un numero di volte pari al numero di raggi da cui è stato colpito.
 
 \section{Lo Spazio Proiettivo}
 
@@ -43,7 +51,7 @@ A partire dal 10° livello, un numero di volte pari al suo bonus di competenza p
 
 \subsection{Chiusura Proiettiva di Bézout}
 
-A partire dal 14° livello, una volta per riposo breve, il Warlock può usare la sua azione bonus per generare un'aura di Geometria Pura intorno a sè. \\ Fino alla fine del prossimo turno del Warlock, tutti gli attacchi a distanza che richiedono un tiro per colpire effettuati da creature dentro l'aura contro altre creature dentro l'aura vanno automaticamente a segno senza effettuare il tiro per colpire.
+A partire dal 14° livello, una volta per riposo breve, il Warlock può usare la sua azione bonus per generare un'aura di Geometria Pura nel raggio di 36m intorno a sè. \\ Fino alla fine del prossimo turno del Warlock, tutti gli attacchi a distanza che richiedono un tiro per colpire effettuati da creature dentro l'aura contro altre creature dentro l'aura vanno automaticamente a segno senza effettuare il tiro per colpire.
 
 \section{Il Signore dell'Assurdo}
 
@@ -62,11 +70,19 @@ A partire dal 14° livello, una volta per riposo breve, il Warlock può usare la
 
 \subsection{Squarcio della fortuna}
 
-A partire dal 1° livello, dopo aver lanciato un incantesimo il Warlock deve tirare il d20. Se il risultato del tiro è uguale o inferiore a 2 + il livello dello slot utilizzato, 2+0 nel caso di un trucchetto, il Warlock deve tirare il d100 e subire il relativo effetto dalla tabella della Magia Selvaggia. \\ Se il risultato dalla tabella è il lancio di un incantesimo, subisce anch'esso gli effetti di Squarcio della fortuna.\\ In compenso, il Warlock ha uno slot incantesimo in più, una supplica occulta in più e un utilizzo dell'arcanum mistico in più per riposo breve.
+A partire dal 1° livello, dopo aver lanciato un incantesimo il Warlock deve tirare il d20. Se il risultato del tiro è uguale o inferiore a 2 + il livello dello slot utilizzato, 2+0 nel caso di un trucchetto, il Warlock deve tirare il d100 e subire il relativo effetto dalla tabella della Magia Selvaggia. \\ Se il risultato dalla tabella è il lancio di un incantesimo, subisce anch'esso gli effetti di Squarcio della fortuna.\\ In compenso, il Warlock ha uno slot incantesimo per riposo breve in più, una supplica occulta in più e un utilizzo dell'arcanum mistico di ogni livello per riposo lungo in più.
+
+\begin{DndTable}{XX}
+  Livello da Warlock & Dado esplosivo \\
+  1°-4°  & d4\\
+  5°-10°  & d6 \\
+  11°-16°  & d8 \\
+  17°-20° & d10 \\
+\end{DndTable}
 
 \subsection{Deflagrazione deflagrante}
 
-A partire dal 1° livello quando il Warlock colpisce un avversario con il trucchetto "Deflagrazione Occulta", come azione bonus può aggiungere un dado esplosivo ai danni inflitti da ogni raggio. \\ Il dado aggiunto è 1d4 al 1° livello, 1d6 al 5° livello, 1d8 all'11° livello e 1d10 al 17° livello. \\ Se il Warlock è sotto un qualunque effetto di massimizzazione del risultato dei tiri per i danni, non può aggiungere il dado esplosivo. \\ Questo privilegio può essere usato un numero di volte pari al bonus di competenza del Warlock per riposo breve.
+A partire dal 1° livello quando il Warlock colpisce un avversario con il trucchetto "Deflagrazione Occulta", come azione bonus può aggiungere il suo dado esplosivo ai danni inflitti da ogni raggio. \\ Se il Warlock è sotto un qualunque effetto di massimizzazione del risultato dei tiri per i danni, non può aggiungere il dado esplosivo. \\ Questo privilegio può essere usato un numero di volte pari al bonus di competenza del Warlock per riposo breve.
 
 \subsection{(S)fortunato}
 
