--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -68,15 +68,15 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
         ]
   
       \DndMonsterDetails[
-          saving-throws = {Str +13, Dex +17, Con +5, Int +17, Wis +17, Cha +5},
-          skills = {Animal Handling +17, Arcana +17, Athletics +13, Insight +17, Perception +17, Sleight of Hand +17, Stealth +17},
+          saving-throws = {For +13, Des +17, Int +17, Sag +17},
+          skills = {Addestrare Animali +17, Arcano +17, Atletica +13, Intuizione +17, Percezione +17, Rapidità di Mano +17, Furtività +17},
           %damage-vulnerabilities = {cold},
           %damage-resistances = {bludgeoning, piercing, and slashing from nonmagical attacks},
           %damage-immunities = {poison},
-          condition-immunities = {Avvelenato,},
+          condition-immunities = {Avvelenato, ammalato},
           senses = {Vista cieca 36 m, vista delle auree 72 m. Percezione Passiva 27},
           languages = {Comune, Elfico, Silvano, Gnomesco, Druidico, Primordiale, Draconico},
-          challenge = 1,
+          challenge = 16,
         ]
       % Traits
 
@@ -134,6 +134,77 @@ La foresta di Mythrenwald, per quanto antica e potente, non è invincibile di fr
 
 \paragraph{Accoglienza e ospitalità} Il Circolo è nato da un gruppo di rifugiati in cerca di una casa, questo non deve essere mai dimenticato. Chiunque voglia unirsi è bene accetto, come ogni viaggiatore in cerca di ospitalità, indipendentemente dalla sua razza o dalle sue origni.
 
+\begin{DndMonster}[float*=b,width=\textwidth + 8pt]{Fillianore Halamis}
+  \begin{multicols}{2}
+    \DndMonsterType{Tiefling, buono caotico}
+
+    % If you want to use commas in the key values, enclose the values in braces.
+    \DndMonsterBasics[
+        armor-class = {16},
+        hit-points  = {\DndDice{20d8 + 100}},
+        speed       = {9 m},
+      ]
+
+    \DndMonsterAbilityScores[
+        str = 16,
+        dex = 16,
+        con = 20,
+        int = 16,
+        wis = 16,
+        cha = 20,
+      ]
+
+    \DndMonsterDetails[
+        saving-throws = {Sag +9, Car +11},
+        skills = {Acrobazia +9, Inganno +11, Intimidire +11, Intrattenere +11},
+        %damage-vulnerabilities = {cold},
+        damage-resistances = {Fuoco},
+        %damage-immunities = {poison},
+        %condition-immunities = {Avvelenato,},
+        senses = {Vista Pura 36m. Percezione Passiva 13},
+        languages = {Comune, Infernale, Silvano, Celestiale, Elfico},
+        challenge = 10,
+      ]
+    % Traits
+
+    \DndMonsterAction{Incantesimi innati}
+    Fillianore può lanciare alcuni incantesimi grazie alle suppliche occulte che possiede e alla sua razza.
+    \begin{DndMonsterSpells}
+      \DndMonsterSpellLevel{Taumaturgia}
+      \DndMonsterSpellLevel[1]{Armatura Magica, Camuffare Sè Stesso}
+      \DndMonsterSpellLevel[2]{Invisibilità, Levitazione, Intimorire Infernale, Oscurità}
+      \DndMonsterSpellLevel[3]{Inviare (su 6 persone prescelte)}
+    \end{DndMonsterSpells}
+
+
+    \DndMonsterAction{Incantesimi}
+    Fillianore recupera i suoi slot incantesimo ogni riposo breve.
+    \begin{DndMonsterSpells}
+      \DndMonsterSpellLevel{Deflagrazione Occulta, Guida, Interdizione alle Lame, Mano Magica, Rintocco dei Morti, Riparare, Salvare i Morenti}
+      \DndMonsterSpellLevel[5][5]{Armatura di Agathys, Charme su Persone, Servitore Inosservato, Frantumare, Lama d'Ombra, Controincantesimo, Rimuovi Maledizione, Volare, Esilio, Porta Dimensionale, Terreno Illusorio, Contattare Altri Piani, Scrutare, Sogno}
+    \end{DndMonsterSpells}
+
+    \DndMonsterAction{Arcanum Mistico}
+    Fillianore recupera i suoi utilizzi dell'Arcanum Mistico ogni riposo lungo.
+    \begin{DndMonsterSpells}
+      \DndMonsterSpellLevel[6][2]{Gabbia dell'Anima}
+      \DndMonsterSpellLevel[7][2]{Spostamento Planare}
+      \DndMonsterSpellLevel[8][2]{Parola del Potere Stordire}
+      \DndMonsterSpellLevel[9][2]{Proiezione Astrale}
+    \end{DndMonsterSpells}
+
+    \DndMonsterAction{Maestro dell'Occulto}
+    Una volta per riposo lungo, Fillianore può meditare per un minuto per riottenere i suoi slot spesi.
+
+    \DndMonsterAction{Poteri del Signore dell'Assurdo}
+    Il patrono di Fillianore è il Signore dell'Assurdo, quindi possiede tutti i poteri che ne derivano.
+
+    \DndMonsterAction{Deflagrazione Aleatoria}
+    6 volte per riposo breve, quando Fillianore colpisce un bersaglio con il trucchetto Deflagrazione Occulta, come azione bonus può imporre al bersaglio di tirare dalla tabella della Magia Selvaggia un numero di volte pari al numero di raggi da cui è stato colpito.
+
+  \end{multicols}
+\end{DndMonster}
+
 \subsection{La struttura del Circolo}
 
 Sebbene in origine il Circolo delle Stelle fosse un'associazione piuttosto disorganizzata, col tempo è andata costituendosi una struttura gerarchica basata sulla conoscenza delle rune della corteccia.
@@ -151,3 +222,7 @@ Sebbene in origine il Circolo delle Stelle fosse un'associazione piuttosto disor
 \subsubsection{Y'Keah il carpentiere}
 
 Un nano dal marcato accento nordico e dall'inesauribile voglia di lavorare. I suoi mobili non sono di qualità particolarmente pregiata ma senza dubbio risultano molto semplici ed economici, che alla fine sono i fattori più importanti per una regione senza un'economia particolarmente fiorente.
+
+\subsection{Fillianore Halamis}
+
+\subsubsection{}
