--- a/data/Eovras/Magia.tex
+++ b/data/Eovras/Magia.tex
@@ -16,12 +16,25 @@
 \paragraph{Il playback degli Warlock}Come ai Warlock non piace ricordare, il loro potere in realtà deriva da quello di altre entità, in un certo senso gli warlock nel migliore dei casi fanno una cover, nel peggiore cantano in playback...
 \paragraph{I Bardi ve li spiegate da soli}La spiegazione del bardo è banale e lasciata come esercizio per il lettore.
 
+\subsection{Desiderio}
+
+Desiderio è un incantesimo potentissimo, il cui potenziale è compreso da pochissime creature, probabilmente solo un paio di esse di origine mortale. \\ Purtroppo a Eovras la conoscenza di come lanciare Desiderio è stata perduta, quindi gli incantatori che avrebbero accesso a questo leggendario incantesimo non possono sceglierlo o ottenerlo passivamente. \\ Ci sono tuttavia entità in grado di soddisfare desideri, e di sicuro un avventuriero sufficientemente determinato potrà ottenere in qualche modo almeno un utilizzo di questo incantesimo... forse...
+
 \section{Il pantheon di Eovras}
 
-\DndDropCapLine{I}{}ndipendentemente dai desideri di un certo Enefeles, a Eovras esistono in effetti diverse divinità, le quali regolano vari aspetti dell'esistenza insieme a moltissimi spiriti minori. Segue un elenco riassuntivo delle maggiori.
+\DndDropCapLine{I}{}ndipendentemente dalla volontà di un certo Enefeles, a Eovras esistono in effetti diverse divinità, le quali regolano vari aspetti dell'esistenza insieme a moltissimi spiriti minori. Segue un elenco riassuntivo delle maggiori.
 
 \subsection{Gli dei benigni}
+\paragraph{Legali}
+\paragraph{Neutrali}
+\paragraph{Caotici}
 
-
+\subsection{Gli dei neutrali}
+\paragraph{Legali}
+\paragraph{Neutrali}
+\paragraph{Caotici}
 
 \subsection{Gli dei maligni}
+\paragraph{Legali}
+\paragraph{Neutrali}
+\paragraph{Caotici}
