--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -2,6 +2,24 @@
 
 \section{Lista degli incantesimi espansa}
 
+\DndDropCapLine{L}{}a più grande fonte di flessibilità in D\&D è la gargantuesca lista di incantesimi fornita dal \textit{Manuale del Giocatore}, per non parlare delle innumerevoli espansioni presenti negli altri manuali ufficiali. \\ Detto questo, sembra che giocatori e dungeon master non facciano altro che aggiungere incantesimi su incantesimi, non ce la si fa più. Figuriamoci se io e i miei giocatori non ne abbiamo aggiunti a nostra volta.
+
+\subsection{Trucchetti}
+
+\subsection{Incantesimi}
+\paragraph{1° livello}
+\paragraph{2° livello}
+\paragraph{3° livello}
+\paragraph{4° livello}
+\paragraph{5° livello}
+\paragraph{6° livello}
+\paragraph{7° livello}
+\paragraph{8° livello}
+\paragraph{9° livello}
+\paragraph{10° livello} \textit{Questi incantesimi sono paragonabili all'intervento di una divinità maggiore}
+\paragraph{11° livello} \textit{Questi incantesimi sono paragonabili all'intervento di un demiurgo}
+\paragraph{12° livello} \textit{Questi incantesimi sono paragonabili all'intervento di Eru Iluvatar}
+
 \section{Descrizione degli incantesimi}
 
 \DndSpellHeader%
@@ -23,6 +41,14 @@ L'incantesimo crea una bolla di raggio a scelta dell'incantatore compreso tra 0,
 L'Incantatore pronuncia una parola del potere per negare le azioni e le intenzioni di un gruppo di creture in grado di sentirlo.
 Le azioni compiute dalle creature influenzate dalla fine dell'ultimo turno dell'incantatore vengono annullate.
 Tutte le creature influenzate sono spaventate fino alla fine del prossimo turno dell'Incantatore.
+
+\DndSpellHeader{Più Profondo dell'Abisso, più Alto del Firmamento}
+{Invocazione di 11° livello}
+{1 minuto}
+{Incantatore (raggio d'azione infinito)}
+{V, S}
+{Istantanea/Infinita}
+L'incantatore proietta la sua coscienza lungo tutti i piani dell'universo, in ogni direzione, nel passato e nel futuro, portando in tensione tutta l'energia dell'universo. \\ Al termine del tempo di lancio, questa energia viene rilasciata ed il tessuto dello spazio-tempo stesso inizia a intonare un accordo, risuonando perfettamente con l'anima dell'incantatore. \\ La realtà stessa viene completamente riplasmata secondo questo accordo, ricreando tutto l'universo in una nuova forma.
 
 \DndSpellHeader%
   {Punizione del Caos}
