--- a/data/Eovras/Magia.tex
+++ b/data/Eovras/Magia.tex
@@ -22,19 +22,4 @@ Desiderio è un incantesimo potentissimo, il cui potenziale è compreso da pochi
 
 \section{Il pantheon di Eovras}
 
-\DndDropCapLine{I}{}ndipendentemente dalla volontà di un certo Enefeles, a Eovras esistono in effetti diverse divinità, le quali regolano vari aspetti dell'esistenza insieme a moltissimi spiriti minori. Segue un elenco riassuntivo delle maggiori.
-
-\subsection{Gli dei benigni}
-\paragraph{Legali}
-\paragraph{Neutrali}
-\paragraph{Caotici}
-
-\subsection{Gli dei neutrali}
-\paragraph{Legali}
-\paragraph{Neutrali}
-\paragraph{Caotici}
-
-\subsection{Gli dei maligni}
-\paragraph{Legali}
-\paragraph{Neutrali}
-\paragraph{Caotici}
+\DndDropCapLine{I}{}ndipendentemente dalla volontà di un certo Enefeles, a Eovras esistono in effetti diverse divinità, le quali regolano vari aspetti dell'esistenza insieme a moltissimi spiriti minori. Per mia mancanza di creatività, il Pantheon di Eovras ricalca quello ideato da J. R. R. Tolkien ne "Il Silmarillion". I Valar fungono da divinità maggiori, i Maiar da divinità minori e spiriti vari. Quindi sì, se ve lo steste chiedendo, Olorin (anche conosciuto come Mithrandir, Gandalf il Grigio, Gandalf il Bianco, Gandalf il Gandalf, Ganjalf e Gandalf il Rimbambito) esiste a Eovras.
