--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -39,7 +39,9 @@ Un numero di volte pari al suo bonus di competenza per riposo breve, quando il W
   5°  &  Cerchio di Teletrasporto, Legame Planare\\
 \end{DndTable}
 
-\subsection{}
+\subsection{Forma lineare associata}
+
+A partire dal 1° livello, una volta per riposo lungo, il Warlock può indicare una creatura che è in grado di vedere. Con un'azione può azzerare il bonus del tiro per colpire di quella creatura fino all'inizio del proprio prossimo turno.
 
 \subsection{Omogeneizzazione}
 
