--- a/Guida.tex
+++ b/Guida.tex
@@ -47,7 +47,7 @@
 
 \tableofcontents
 
-\mainmatter%
+\mainmatter
 
 \part{Ipotesi necessarie}
 
@@ -57,7 +57,7 @@
 
 \part{Opzioni per i personaggi}
 
-\input{data/Personaggi/Razze.tex}
+%\input{data/Personaggi/Razze.tex}
 
 \input{data/Personaggi/Artefice.tex}
 
@@ -89,7 +89,7 @@
 
 \input{data/Personaggi/Incantesimi.tex}
 
-\input{data/Personaggi/Oggetti.tex}
+%\input{data/Personaggi/Oggetti.tex}
 
 \part{Il Mondo di Eovras}
 
