--- a/data/Eovras/Magia.tex
+++ b/data/Eovras/Magia.tex
@@ -7,7 +7,7 @@
 
 \section{La Magia a Eovras}
 
-\DndDropCapLine{N}{}el mio studio del continente di Eovras mi sono imbattuto in una forma molto peculiare di magia tra i mondi che ho visitato. Sembra che a Eovras la magia funzioni in modo molto simile alla musica: ci sono diversi modi di approcciarvisi, ma sono tutte strade verso la stessa energia.
+\DndDropCapLine{N}{}el mio studio del continente di Eovras mi sono imbattuto in una forma molto peculiare di magia tra i mondi che ho visitato. Sembra che a Eovras la magia funzioni in modo molto simile alla musica: ci sono diversi modi di approcciarvisi, ma sono tutte strade verso la stessa energia. \\ Questo non è un caso: dai miti e dalle leggende sembra evidente che magia e musica siano non solo molto simili, ma praticamente la stessa cosa: l'essenza stessa della realtà.
 
 \paragraph{Gli studi dei Maghi}L'approccio dei maghi è quello più accademico ovviamente, un mago esperto è come un pianista tecnicamente impeccabile, ma potrebbe mancare di spontaneità. Il migliore dei maghi deve eccellere tanto per la sua capacità tecnica quanto per la sua creatività.
 \paragraph{Il talento degli Stregoni}Credo che chiunque abbia mai provato ad approcciarsi allo studio di uno strumento musicale prima o poi si sia sentito umiliato dalle capacità di un bambino prodigio, che grazie al suo talento esibisce una maestria del proprio strumento che non si riuscirà mai ad eguagliare. Ecco, questi sono gli stregoni. Sì maghi, siete autorizzati a detestarli.
